Add teams support
